Ateração dos destinos do aquivos no código do iRock

--- a/irock.html
+++ b/irock.html
@@ -17,15 +17,15 @@
 
 			if(userName) {
 				alert("Prazer te conhecer, " + userName + ".");
-				document.getElementById("rockImg").src = "C:/HUDSON/rock_happy.png";
-				setTimeout("document.getElementById('rockImg').src = 'C:HUDSON/rock.png';", 5000);
+				document.getElementById("rockImg").src = "C:/iRock/rock_happy.png";
+				setTimeout("document.getElementById('rockImg').src = 'C:/iRock/rock.png';", 5000);
 			}
 		}
 	</script>
 </head>
 <body onload= "greatUser(); resizeRock()"; onresize="resizeRock();">
 	<div style="margin-top:50px;  text-align: center ;">
-		<img id="rockImg" src="C:\HUDSON\rock.png" alt="iRock"
+		<img id="rockImg" src="C:\iRock\rock.png" alt="iRock"
 		style="cursor: pointer" onclick="touchRock();">
 	</div>
 
