Inplementação dos cookies para salvar nome do usuário

--- a/irock.html
+++ b/irock.html
@@ -4,23 +4,43 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>iRock - A rocha virtual de estimação </title>
+	<script type="text/javascript" src="cookie.js"></script>
 	<script type="text/javascript">
+		var userName;
+
 		function resizeRock() {
 			document.getElementById(rockImg).style.height = (document.body.clientHeight - 100) * 0.9;
 		}
 		function greatUser() {
-			alert("Opa, eu sou sua pedra de estimação!!")
-		}
-		function touchRock() {
-			var userName = prompt ("Qual o seu nome?", 
-									"Coloque seu nome aqui");
-
-			if(userName) {
-				alert("Prazer te conhecer, " + userName + ".");
-				document.getElementById("rockImg").src = "C:/iRock/rock_happy.png";
-				setTimeout("document.getElementById('rockImg').src = 'C:/iRock/rock.png';", 5000);
+			if (navigator.cookieEnabled) {
+				userName = readCookie("irock_username");
+			}
+			if (userName) {
+				alert ("Olá " + userName + ", senti sua falta.");
+			}
+			else{
+				alert ('Olá. eu sou sua rocha de estimação.');
 			}
 		}
+		function touchRock() {
+			if (userName) {
+				alert("Eu gosto de atenção, " + userName + "., Obrigada.");
+			}
+			else {
+				userName = prompt("Qual é o seu nome?", "Digite seu nome aqui.");
+				if (userName) 
+					alert ("Que bom conhecer você, " + userName + ".");
+				if (navigator.cookieEnabled)
+					whiteCookie("irock_username", userName, 5 * 365);
+				else {
+					alert("Sorry. A ausência de suporte a cookies limatará o iRock!");
+				}
+			}
+
+			document.getElementById("rockImg").src = "C:/iRock/rock_happy.png";
+			setTimeout("document.getElementById('rockImg').src = 'C:/iRock/rock.png';", 5000);
+		}
+			
 	</script>
 </head>
 <body onload= "greatUser(); resizeRock()"; onresize="resizeRock();">
