Adicionado arquivo css

--- a/irock.html
+++ b/irock.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>iRock - A rocha virtual de estimação </title>
+	<link rel="stylesheet" href="css/iRock_style.css">
 	<script type="text/javascript" src="cookie.js"></script>
 	<script type="text/javascript">
 		var userName;
@@ -44,6 +45,9 @@
 	</script>
 </head>
 <body onload= "greatUser(); resizeRock()"; onresize="resizeRock();">
+	<div class="title_iRock" style="margin-top:  50px; text-align: center;" >
+		<b>iRock, a rocha de estimação</b>
+	</div>
 	<div style="margin-top:50px;  text-align: center ;">
 		<img id="rockImg" src="C:\iRock\rock.png" alt="iRock"
 		style="cursor: pointer" onclick="touchRock();">
