--- a/irock.html
+++ b/irock.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>iRock - A rocha virtual de estimação </title>
-	<link rel="stylesheet" href="css/iRock_style.css">
+	<link rel="stylesheet" type="text/css" href="/css/iRock_style.css">
 	<script type="text/javascript" src="cookie.js"></script>
 	<script type="text/javascript">
 		var userName;
