--- a/irock.html
+++ b/irock.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>iRock - A rocha virtual de estimação </title>
-	<link rel="stylesheet" type="text/css" href="/css/iRock_style.css">
+	<link rel="stylesheet" type="text/css" href="CSS/iRock_style.css">
 	<script type="text/javascript" src="cookie.js"></script>
 	<script type="text/javascript">
 		var userName;
@@ -49,7 +49,7 @@
 		<b>iRock, a rocha de estimação</b>
 	</div>
 	<div style="margin-top:50px;  text-align: center ;">
-		<img id="rockImg" src="C:\iRock\rock.png" alt="iRock"
+		<img class="img1" id="rockImg" src="C:\iRock\rock.png" alt="iRock"
 		style="cursor: pointer" onclick="touchRock();">
 	</div>
 
