--- a/irock.html
+++ b/irock.html
@@ -52,13 +52,13 @@
 	<div class="tittle1" style="margin-top:  50px; text-align: center;" >
 		<b>iRock, a rocha de</b>
 	</div> 
-	<div class="tittle2" style="margin-top: 0px; text-align: center;">
+	<div class="tittle2" style="margin-top: 10px; text-align: center;">
 		<b>ESTIMAÇÃO</b>
 	</div>
-	<div style="margin-top:25px;  text-align: center ;">
+	<div style="margin-top:0px; text-align: center ;">
 		<img class="img1" id="rockImg" src="C:\iRock\rock.png" alt="iRock"
-		style="cursor: pointer" onclick="touchRock();">
-	</div>
+		style="cursor: pointer" onclick="touchRock();" style="margin-top:0px; text-align: center ;">
+	
 
 
 	
