--- a/irock.html
+++ b/irock.html
@@ -9,10 +9,6 @@
 	<script type="text/javascript">
 		var userName;
 
-		function colorfull() {
-
-		}
-
 		function resizeRock() {
 			document.getElementById(rockImg).style.height = (document.body.clientHeight - 100) * 0.9;
 		}
@@ -49,6 +45,7 @@
 	</script>
 </head>
 <body class="piscaPisca" onload= "greatUser(); resizeRock()"; onresize="resizeRock();">
+	
 	<div class="tittle1" style="margin-top:  50px; text-align: center;" >
 		<b>iRock, a rocha de</b>
 	</div> 
@@ -56,9 +53,13 @@
 		<b>ESTIMAÇÃO</b>
 	</div>
 	<div style="margin-top:0px; text-align: center ;">
-		<img class="img1" id="rockImg" src="C:\iRock\rock.png" alt="iRock"
-		style="cursor: pointer" onclick="touchRock();" style="margin-top:0px; text-align: center ;">
-	
+	<img class="img1" id="rockImg" src="C:\iRock\rock.png" alt="iRock" style="cursor: pointer" onclick="touchRock();" style="margin-top:0px; text-align: center ;">
+	<div>
+		<button class="bt1" style="margin-top: 10px; text-align: center;" 
+		onclick="alert('Você invadiu a NASA!!!')">
+			CHANGE
+		</button>
+	</div>
 
 
 	
