--- a/acesso.html
+++ b/acesso.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <div id="logado"></div>
-    <a href="/">Back the page</a>
+    <a href="irock.html">Back the page</a>
     <script>
-        const resultsList = document.getElementById('logado')
+        const logadoList = document.getElementById('logado');
         new URLSearchParams(window.location.search).forEach((value,
-         nome) => {
-            resultsList.append('${name}: ${value}')
-            resultsList.append(document.createElement('br'))
+        nome) => {
+            logadoList.append(`${name}: ${value}`);
+            logadoList.append(document.createElement('br'));
         })
-    </script>
+    </script> 
 </body>
 </html>
