--- a/irock.html
+++ b/irock.html
@@ -64,17 +64,20 @@
 			</div>
 		</div>
 
-		<div id="sidebar">
-			<form action="acesso.html" method="POST">
-				<div>
-					<label>Name</label>
-					<input>
+		<div id="sidebar" style="text-align: center; margin-top: 25px;">
+			<form action="acesso.html" method="GET">
+				<div id="form">
+					<div>
+						<label>Name</label>
+						<input name="name">
+					</div>
+					<div>
+						<label>Password</label>
+						<input name="password">
+					</div>
+					<button>Submit</button>
 				</div>
-				<div>
-					<label>Password</label>
-					<input>
-				</div>
-				<button>Submit</button>
+				
 			</form>
 		</div>
 
