Tentando concertar os dados do login

--- a/irock.html
+++ b/irock.html
@@ -69,11 +69,11 @@
 				<div id="form">
 					<div>
 						<label>Name</label>
-						<input name="name">
+						<input name="Name">
 					</div>
 					<div>
 						<label>Password</label>
-						<input name="password">
+						<input type="password" name="Password">
 					</div>
 					<button>Submit</button>
 				</div>
