--- a/irock.html
+++ b/irock.html
@@ -58,22 +58,22 @@
 				<div>
 					<button class="bt1" style="margin-top: 10px; text-align: center;" 
 					onclick="alert('Você invadiu a NASA!!!')">
-						CHANGE
+						PLAY
 					</button>
 				</div>
 			</div>
 		</div>
 
 		<div id="sidebar" style="text-align: center; margin-top: 25px;">
-			<form action="acesso.html" method="GET">
-				<div id="form">
+			<form action="acesso.html" method="get">
+				<div id="form" style="text-align: center;">
 					<div>
 						<label>Name</label>
-						<input name="Name">
+						<input id="name" name="Name" placeholder="Seu nome">
 					</div>
 					<div>
 						<label>Password</label>
-						<input type="password" name="Password">
+						<input id="pass" name="Password" placeholder="************" type="password">
 					</div>
 					<button>Submit</button>
 				</div>
