--- a/irock.html
+++ b/irock.html
@@ -68,11 +68,14 @@
 			<form action="acesso.html" method="get">
 				<div id="form" style="text-align: center;">
 					<div>
-						<label>Name</label>
+						<h1 class="login1">LOGIN</h1>
+					</div>
+					<div>
+						<label class="labelName">Name</label>
 						<input id="name" name="Name" placeholder="Seu nome">
 					</div>
 					<div>
-						<label>Password</label>
+						<label class="labelPass">Password</label>
 						<input id="pass" name="Password" placeholder="************" type="password">
 					</div>
 					<button>Submit</button>
